fixed filter on mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -544,14 +544,37 @@ li {
 }
 
 @media screen and (max-width: 1015px) {
-  .productList .products {
-    grid-template-columns: repeat(2, 1fr);
-    padding: 0 1rem;
-    width: 100%;
+  .productList {
+    flex-direction: column;
+    position: relative;
   }
 
   .productCategoryFilter {
+    display: flex;
+    align-items: center;
+    padding: 0.2rem;
+    background-color: #2a9d8f;
+    color: #fff;
+    position: absolute;
+    top: 4.2em;
+    left: 0;
+    z-index: 12;
+  }
+
+  .productCategoryFilter h4 {
     display: none;
+  }
+
+  .productCategoryFilter p {
+    width: 7.6rem;
+    text-align: center;
+  }
+
+  .productList .products {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 2rem 1rem;
+    width: auto;
+    margin: 0;
   }
 }
 
